# stream_management

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  main.cpp  sample.py  test.cpp
include/camera/: camera.h  stream_management.h  websocket_server.h
include/utility/: base64.h
src/: main.cpp
src/camera/: camera.cpp  stream_management.cpp  websocket_server.cpp
src/utility/: base64.cpp
